--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Structural Elements Activity (Organized Version 2) (21 October 2022)</title>
-        <link rel="stylesheet" href="../CSS/CSSEssentials (21 October 2022).css">
+        <link rel="stylesheet" href="CSSEssentials (21 October 2022).css">
         <link rel="icon" href="../New Project (Copy)/IVFNP/Rhodes Island Symbol.jpg" type="image/x-icon">
         <script type="text/javascript" src="../JS/jquery.js"></script>
         <script type="text/javascript" src="../JS/cycle2.js"></script>
